# link_shortener

./: .env_example  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
helm/src/: Chart.yaml  values.yaml
helm/src/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
init-container/: Dockerfile  requirements.txt
k8s/: secret.yaml
src/: .dockerignore  Dockerfile  alembic.ini
src/app/: middlewares.py  service.py
src/app/config/: config.py  database.py
src/app/data_sources/storages/: link.py
src/app/link/: controller.py
src/app/migrations/: env.py
src/app/migrations/versions/: 000001_creation_table.py
src/app/models/: models.py
src/app/views/: link.py
src/tests/: conftest.py
src/tests/integration/views/: test_link.py
src/tests/unit/: test_storage.py
