[tool.poetry]
name = "link_shortener"
version = "0.1.0"
description = ""
authors = ["AntonDoncov <anton.dontsovgs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.18.0"
fastapi = {extras = ["all"], version = "^0.104.0"}
aiohttp = "^3.8.6"
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
opentracing = "^2.4.0"
jaeger-client = "^4.8.0"
prometheus-client = "^0.17.1"
aiojobs = "^1.2.0"
requests = "^2.31.0"
validators = "^0.22.0"
SQLAlchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
